[package]
name = "Rescuer"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3"
dirs = "4.0"
rust-crypto = "0.2"
orion = "0.17.6"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rand = "0.8.5"
rsa = {version = "0.9.6", features = ["pem"]}
wallpaper = "3.2.0"
winapi = "0.3.9"
ring = "0.17.8"
hex = "0.4.3"

[build-dependencies]
static_vcruntime = "2.0"
